working on issues for mobile devices with elements that are too wide for screen

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -655,10 +655,14 @@ h6 {
     letter-spacing: normal;
   }
   #profile-name {
-    width: 60%;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
   }
   #profile-name-more {
-    width: 60%;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
